cube plaq terms

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -449,6 +449,7 @@
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
     "\n",
+    "\n",
     "plt.xlabel(r\"$\\beta$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
     "ax=plt.gca()\n",
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -481,6 +482,10 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "rcParams['text.usetex']     = True\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
     "L=[8,12,16,20]\n",
@@ -494,6 +499,8 @@
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
+    "plt.axhline(2*np.log(2),color=\"red\")\n",
+    "\n",
     "\n",
     "plt.xlabel(r\"loop tension~~~$h$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
@@ -515,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -530,7 +537,7 @@
     "L=[8]\n",
     "l=8\n",
     "tau = 0.76141\n",
-    "TAU=[0.76141,0.76142]\n",
+    "TAU=[0.76141]\n",
     "W=[8]\n",
     "#TAU=[0.76141]\n",
     "#for w in W:\n",
@@ -591,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11+"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
