--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "## Plaquette Hamiltonian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +38,7 @@
     "    \n",
     "\n",
     "        \n",
-    "plt.axvline(0.76141)\n",
+    "plt.axvline(0.76141,color=\"grey\")\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "\n",
@@ -75,10 +79,82 @@
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatplaL\"+str(l)+\".dat\",unpack=True)\n",
     "    axins.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=5,capsize=1.5,label=r\"L=\"+str(l))\n",
-    "axins.axvline(0.76141)\n",
+    "axins.axvline(0.76141,color=\"grey\")\n",
     "\n",
     "\n",
     "plt.savefig(\"SpecHeatPlaquettes.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scaling Plaquette Specific Heat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "rcParams[\"figure.figsize\"] = [12,4]\n",
+    "\n",
+    "\n",
+    "plt.subplot(121)\n",
+    "\n",
+    "L = np.array([8,12,16,20])\n",
+    "inv = 1./L\n",
+    "\n",
+    "invar = 1./L**(1./0.62997)\n",
+    "peakx = np.array([ 0.732, 0.746, 0.752, 0.755])\n",
+    "a,b = np.polyfit(invar, 1./peakx,1)\n",
+    "\n",
+    "X=np.linspace(0,0.8)\n",
+    "\n",
+    "plt.axvline(0,color=\"k\")\n",
+    "plt.axhline(0)\n",
+    "\n",
+    "plt.plot(invar,1./peakx,'.')\n",
+    "plt.plot(X, a*X + b)\n",
+    "plt.xlabel(r\"inverse system size~~~$1 / L^{1./0.62997}$\")\n",
+    "plt.ylabel(r\"$\\beta$ at peak location of $c_V$\")\n",
+    "\n",
+    "#plt.plot(1./20, a/20 + b,'^')\n",
+    "plt.xlim(-0.01, 0.05)\n",
+    "plt.ylim(1.2, 1.4)\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
+    "\n",
+    "invary = 1./L**0.11\n",
+    "invln = 1./np.log(L)\n",
+    "\n",
+    "peaky = np.array([1.931, 2.298, 2.547, 2.751])\n",
+    "plt.subplot(122)\n",
+    "\n",
+    "c,d = np.polyfit(invary, peaky,1)\n",
+    "plt.axvline(0,color=\"k\")\n",
+    "plt.axhline(0)\n",
+    "\n",
+    "plt.plot(invary,peaky,'.')\n",
+    "plt.plot(X, c*X + d)\n",
+    "plt.xlabel(r\"inverse system size~~~$1 / L^{0.1100}$\")\n",
+    "plt.ylabel(r\"peak height of $c_V$\")\n",
+    "plt.xlim(0.7,0.8)\n",
+    "plt.ylim(1.8, 2.8)\n",
+    "\n",
+    "\n",
+    "plt.savefig(\"ScalingPlaqTC.pdf\")\n",
+    "print b\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -226,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -236,12 +312,13 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "import prepare_plotting as pp\n",
+    " \n",
     "\n",
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
+    "rcParams[\"figure.figsize\"] = [12,4]\n",
     "\n",
-    "\n",
-    "L=[4,6,8,10,12]\n",
+    "L=[4,6,8,10,12,16,20]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
@@ -261,21 +338,74 @@
     "\n",
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
-    "plt.xlim(0,1./0.21)\n",
+    "plt.xlim(0,5.0)\n",
     "plt.ylim(0,0.5)\n",
     "\n",
     "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
     "\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"SpecHeatXCube.pdf\")\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XCube subtraction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 169,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "from scipy.interpolate import PchipInterpolator as pchip\n",
+    "\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "rcParams[\"figure.figsize\"] = [12,4]\n",
+    "\n",
+    "\n",
+    "def vertex(x):\n",
+    "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL20.dat\",unpack=True)\n",
+    "    vert20 = pchip(beta,cv/(3*20**3))\n",
+    "    return vert20(x)\n",
+    "\n",
+    "X = np.linspace(0,4.0,100)\n",
+    "\n",
+    "plt.plot(X, vertex(X))\n",
+    "    \n",
+    "    \n",
+    "L=[4,6,8,10,12,16,20]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3)-vertex(beta),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interpolate XCube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -287,17 +417,102 @@
     "import prepare_plotting as pp\n",
     "\n",
     "pp.prepare_aps_fig(rcParams)\n",
+    "rcParams[\"figure.figsize\"] = [12,4]\n",
     "\n",
-    "inv = [0,1./12,1./10,1./8,1./6, 1./4]\n",
-    "peak = [0,1./2.15,1./1.975,1./1.735,1./1.45,1/1.05]\n",
-    "a,b = np.polyfit(inv[1:], peak[1:],1)\n",
+    "L = np.array([4,6,8,10,12,16,20])\n",
+    "inv = 1./L\n",
+    "inv2 = 1./L**2\n",
+    "invar = 1./L**1.2\n",
+    "invln = 1./(np.log(L))\n",
+    "invsqrt = 1./np.sqrt(L)\n",
+    "peak = [ 1/1.05,1./1.45,1./1.742,1./1.959,1./2.15,1./2.43,1./2.6]\n",
+    "a,b = np.polyfit(invar, peak,1)\n",
     "\n",
-    "X=np.linspace(0,0.25)\n",
+    "X=np.linspace(0,1.25)\n",
     "\n",
-    "plt.plot(inv,peak,'.')\n",
+    "plt.subplot(121)\n",
+    "\n",
+    "plt.axvline(0)\n",
+    "plt.axhline(0)\n",
+    "\n",
+    "plt.plot(invar,peak,'.')\n",
     "plt.plot(X, a*X + b)\n",
-    "plt.xlim(-0.1, 0.3)\n",
-    "plt.ylim(-0.1, 1.3)\n",
+    "plt.xlabel(r\"inverse system size~~~$1 / L^{1.2}$\")\n",
+    "plt.ylabel(r\"$\\beta$ at peak location of $c_V$\")\n",
+    "\n",
+    "#plt.plot(1./20, a/20 + b,'^')\n",
+    "plt.xlim(-0.05, 0.4)\n",
+    "plt.ylim(-0.05, 1.1)\n",
+    "\n",
+    "plt.subplot(122)\n",
+    "peaky = np.array([0.184, 0.246, 0.265, 0.278, 0.296, 0.290, 0.376])\n",
+    "invary = 1./L**1\n",
+    "\n",
+    "c,d = np.polyfit(invary, peaky,1)\n",
+    "\n",
+    "plt.plot(invary,peaky,'.')\n",
+    "plt.plot(X, c*X + d)\n",
+    "plt.xlabel(r\"inverse system size~~~$1 / L^{1.2}$\")\n",
+    "plt.ylabel(r\"peak height of $c_V$\")\n",
+    "\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
+    "\n",
+    "plt.savefig(\"ScalingXCube.pdf\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XCube plaquettes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    " \n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "rcParams[\"figure.figsize\"] = [12,4]\n",
+    "\n",
+    "L=[4]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCubePlaq\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube Plaq L=\"+str(l))\n",
+    "    \n",
+    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL20.dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*20**3),err/(3*20**3),errorevery=1,label=r\"3D TC L=\"+str(20))\n",
+    "\n",
+    "l=4\n",
+    "beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube4.dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
+    "plt.xlim(0,5.0)\n",
+    "plt.ylim(0,0.5)\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
+    "\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"SpecHeatXCubePlaq.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -310,9 +525,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 106,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -322,14 +537,22 @@
     "import prepare_plotting as pp\n",
     "\n",
     "pp.prepare_aps_fig(rcParams)\n",
+    "#%matplotlib inline\n",
+    "\n",
+    "rcParams[\"figure.figsize\"] = [12,12]\n",
     "\n",
     "\n",
-    "\n",
-    "L=[4,6,8]\n",
+    "L=[4,6,8,12,16]\n",
+    "L=[3,4,5,12]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"haah/SpecHeatHaah\"+str(l)+\".dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"Haah L=\"+str(l))\n",
     "\n",
+    "L=[4]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"haah/SpecHeatHaah\"+str(l)+\"exc3.dat\",unpack=True)\n",
+    "    #plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"other Haah L=\"+str(l))\n",
+    "    \n",
     "l = 4\n",
     "beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
     "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
@@ -352,14 +575,57 @@
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
     "plt.xlim(0,2.5)\n",
-    "plt.ylim(0,0.5)\n",
+    "#plt.ylim(0,0.5)\n",
     "\n",
     "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
     "\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
-    "plt.savefig(\"SpecHeatHaah.pdf\")\n",
+    "plt.savefig(\"SpecHeatHaah5.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combined Haah, XCUBE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "\n",
+    "\n",
+    "L=[4,8]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"haah/SpecHeatHaah\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"Haah L=\"+str(l))\n",
+    "\n",
+    "L=[4,6,8,10,12]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,color=\"gray\",label=r\"XCube L=\"+str(l))\n",
+    "    \n",
+    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL20.dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*20**3),err/(3*20**3),errorevery=1,label=r\"3D TC L=\"+str(20))\n",
+    "\n",
+    "plt.xlim(0,3.0)\n",
+    "\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   }
@@ -380,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11+"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
