cube plaq terms debugged

--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -488,24 +488,28 @@
     "\n",
     "rcParams[\"figure.figsize\"] = [12,4]\n",
     "\n",
-    "L=[4]\n",
+    "L=[4,6,8,12]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCubePlaq\"+str(l)+\".dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube Plaq L=\"+str(l))\n",
-    "    \n",
-    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL20.dat\",unpack=True)\n",
-    "plt.errorbar(beta,cv/(3*20**3),err/(3*20**3),errorevery=1,label=r\"3D TC L=\"+str(20))\n",
     "\n",
-    "l=4\n",
-    "beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube4.dat\",unpack=True)\n",
-    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
+    "L=[4,6,8,12]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
+    "\n",
+    "\n",
+    "beta,ener,enererr=np.loadtxt(\"xcube/EnergyCube4.dat\",unpack=True)\n",
+    "plt.errorbar(beta,ener/(4**3),enererr/(4**3),errorevery=1,label=r\"XCube Cube Energy L=\"+str(4))\n",
+    "beta,ener,enererr=np.loadtxt(\"xcube/EnergyPlaq4.dat\",unpack=True)\n",
+    "plt.errorbar(beta,ener/(3*4**3),enererr/(3*4**3),errorevery=1,label=r\"XCube Plaq Energy L=\"+str(4))\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "\n",
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
     "plt.xlim(0,5.0)\n",
-    "plt.ylim(0,0.5)\n",
+    "#plt.ylim(0,0.5)\n",
     "\n",
     "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
     "\n",
