--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -386,9 +386,10 @@
     "\n",
     "    \n",
     "L=[8,12,16,20]\n",
+    "L=[8,12]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
+    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,capsize=1.5,label=\"L = \"+str(l)+\" tubes\")\n",
     "\n",
     "L=[8]\n",
     "for l in L:\n",
@@ -400,16 +401,18 @@
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
-    "plt.axhline(2*np.log(2),color=\"red\")\n",
-    "plt.axhline(3*np.log(2),color=\"red\")\n",
+    "#plt.axhline(2*np.log(2),color=\"red\")\n",
+    "#plt.axhline(3*np.log(2),color=\"red\")\n",
     "\n",
-    "plt.xlabel(r\"$\\beta$\")\n",
-    "plt.ylabel(r\"$\\gamma$\")\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"topological entropy~~~$\\gamma$\")\n",
     "\n",
     "#plt.xlim(0.19,0.81)\n",
     "plt.gcf().subplots_adjust(bottom=0.155)\n",
     "plt.gcf().subplots_adjust(left=0.155)\n",
     "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "ax=plt.gca()\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
     "plt.savefig(\"Gamma3d_plaquettes_tube.pdf\")\n",
     "plt.show()"
    ]
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -533,18 +536,17 @@
     "from matplotlib import rcParams\n",
     "rcParams['text.usetex']     = True\n",
     "\n",
-    "    \n",
     "L=[8]\n",
     "l=8\n",
     "tau = 0.76141\n",
-    "TAU=[0.76141]\n",
+    "TAU=[0.76139,0.76141,0.76142]\n",
     "W=[8]\n",
     "#TAU=[0.76141]\n",
     "#for w in W:\n",
     "for tau in TAU:\n",
     "    for w in W:\n",
     "        magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_\"+str(w)+\"_\"+str(tau)+\".dat\",unpack=True)\n",
-    "        plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\" W = \"+str(w)+\", $\\Delta t$=\"+str(tau))\n",
+    "        plt.errorbar(magn*2*1./tau,gamma,gamma_err,errorevery=1,capsize=1.5,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
     "dtau = [0.76141]\n",
     "\n",
@@ -576,7 +578,7 @@
     "\n",
     "plt.xlim(0.0,0.7)\n",
     "plt.ylim(-0.3,1.4)\n",
-    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"upper center\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_transv_magn.pdf\")\n",
     "plt.show()"
    ]
